--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+body {
+  background-color: #fceec8;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home {
+  width: 100%;
+  height: 100vh;
+  padding-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.member {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  padding-top: 30px;
+  flex-direction: column;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.m__title {
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.card {
+  width: 300px;
+  background-color: #9edef9;
+  border-radius: 1rem;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+  padding: 10px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin: 10px 0px;
+}
+
+.button {
+  outline: none;
+  border: none;
+  text-decoration: none;
+  width: 150px;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+  background-color: #9edef9;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+
+.ts {
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.genres {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cards {
+  display: flex;
+  max-width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border: 1px solid black;
+  margin: 0px 10px;
+}
+
+.cards-top > img {
+  max-width: 100%;
+  max-height: 100px;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.cards-body {
+  padding: 15px;
+}
+
+.cards-body > p {
+  padding: 5px;
+  font-size: 10px;
+  text-align: center;
+}
+
+.cards-body > h3 {
+  padding: 5px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.g_foot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
