--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,29 @@ body {
   justify-content: center;
 }
 
+.ages {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.a__card {
+  background-color: white;
+  padding: 20px 70px;
+  border-radius: 10px;
+  border: 1px solid gray;
+}
+
+.a__card > h2 {
+  padding: 10px;
+}
+
+.a__card > h3 {
+  margin: 5px 0;
+}
+
 .member {
   width: 100%;
   margin: auto;
@@ -59,28 +82,34 @@ body {
   align-items: center;
   justify-content: center;
   margin: 10px;
+  cursor: pointer;
 }
 
-.ts {
+.genres_title {
+  margin: 1rem 0;
   width: 100%;
-  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .genres {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 60vh;
+  margin: 1rem 1rem;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 10px;
+}
+
+.load {
+  display: grid;
+  place-items: center;
+  text-align: center;
 }
 
 .cards {
   display: flex;
-  max-width: 100%;
+  max-width: 80%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -116,4 +145,57 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+/* Tugas 3 */
+.ts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* background: linear-gradient(
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.3)
+  ); */
+}
+
+.ts_form {
+  background-color: white;
+  padding: 20px 70px;
+  border-radius: 10px;
+  border: 1px solid gray;
+}
+
+.ts_title {
+  text-align: center;
+  padding: 1.5rem;
+}
+
+.ts_formInput {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+}
+
+.ts_formInput > input {
+  padding: 15px;
+  margin: 10px 10px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+
+.ts_form > button {
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  border: none;
+  background-color: rebeccapurple;
+  color: white;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 15px;
+  margin-bottom: 30px;
 }
